<resources>
    <string name="app_name">Chat Android</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="message_bienvenue">Bienvenue sur l\'application de chat</string>
    <string name="message_connexion">Connexion</string>
    <string name="message_inscription">Inscription</string>
    <string name="message_reset_password">Demander un nouveau mot de passe</string>
    <string name="button_connexion">Se connecter</string>
    <string name="button_renvoyer_mdp">Renvoyer un mot de passe</string>
    <string name="button_inscription">S\'inscrire</string>
    <string name="placeholder_email">Email</string>
    <string name="placeholder_password">Mot de passe</string>
    <string name="placeholder_pseudo">Pseudo</string>
    <string name="button_reset_password">Mot de passe perdu ?</string>





    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>